--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "photoswipe": "^5.4.3",
+    "firebase": "^10.12.2",
+    "photoswipe": "^5.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
